--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,14 @@ events {
 }
 
 http {
+    types {
+        text/html html;
+        text/css css;
+        application/javascript js;
+        application/json json;
+    }
+    default_type application/octet-stream;
+
     server {
         listen 80;
         server_name _;
